<?xml version="1.0" encoding="utf-8"?>
<!-- Tutor mode; MainActivity swaps it with menu_bottom_navigation because a bottom bar holds at most five items. -->
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_tutor_home"
        android:title="@string/page_tutor_home"
        android:icon="@drawable/ic_home_nav" />
    <item
        android:id="@+id/nav_teaching"
        android:title="@string/page_teaching"
        android:icon="@drawable/ic_calendar_nav" />
    <item
        android:id="@+id/nav_classes"
        android:title="@string/page_classes"
        android:icon="@drawable/ic_users" />
    <item
        android:id="@+id/nav_login"
        android:title="@string/page_login"
        android:icon="@drawable/ic_login" />
    <item
        android:id="@+id/nav_account"
        android:title="@string/page_account"
        android:icon="@drawable/ic_person"
        android:visible="false" />
</menu>
