...
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/change_phone"
                    style="@style/TextButton"
                    android:text="@string/change_phone"
                    android:contentDescription="@string/change_phone" />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sign_in"
                    style="@style/SecondaryButton"
                    android:text="@string/back_login"
                    android:contentDescription="@string/back_login" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
...
